# cosmo-nats-test

./: .gitignore  Cargo.toml  README.md  justfile  setup-nats-manual.sh
manager/: Cargo.toml
manager/src/: main.rs
nats-data/jetstream/$G/streams/demoStream/: meta.inf  meta.sum
nats-data/jetstream/$G/streams/demoStream/msgs/: index.db
router/: config.yaml  edg.graphqls  execution-config.json  graph.yaml
scripts/: bootstrap.sh  dev-start.sh  nats-setup.sh  nats-simple-setup.sh  publish-nats.sh
subgraph/: Cargo.toml
subgraph/src/: main.rs
subgraphs/subgraph-1/: Cargo.toml
subgraphs/subgraph-1/src/: main.rs
subgraphs/subgraph-2/: Cargo.toml
subgraphs/subgraph-2/src/: main.rs
