[workspace]
members = ["subgraphs/subgraph-1", "subgraphs/subgraph-2"]
resolver = "2"

[workspace.dependencies]
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
tokio-stream = "0.1"
