[package]
name = "subgraph-2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
async-stream = { workspace = true }
tokio-stream = { workspace = true }
